uncaughtExceptions.log
[2025-07-02T06:36:09.822Z] ERROR: uncaughtException: Cannot find module '../routes/trip/trip'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\userRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
Error: Cannot find module '../routes/trip/trip'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\userRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\KRISHNA\Travel-App\startup\userRoutes.js:7:20)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
[2025-07-02T06:38:40.140Z] ERROR: uncaughtException: Cannot find module '../routes/trip/tripRoutes'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\userRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
Error: Cannot find module '../routes/trip/tripRoutes'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\userRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\KRISHNA\Travel-App\startup\userRoutes.js:7:20)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
[2025-07-02T06:39:25.941Z] ERROR: uncaughtException: Cannot find module 'axios'
Require stack:
- C:\Users\KRISHNA\Travel-App\routes\hotel\hotels.js
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
Error: Cannot find module 'axios'
Require stack:
- C:\Users\KRISHNA\Travel-App\routes\hotel\hotels.js
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\KRISHNA\Travel-App\routes\hotel\hotels.js:2:15)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
[2025-07-02T07:15:54.814Z] ERROR: uncaughtException: Unexpected token ','
C:\Users\KRISHNA\Travel-App\routes\hotel\locations.js:29
, {
^

SyntaxError: Unexpected token ','
    at wrapSafe (node:internal/modules/cjs/loader:1486:18)
    at Module._compile (node:internal/modules/cjs/loader:1528:20)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
    at Function._load (node:internal/modules/cjs/loader:1108:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js:2:24)
[2025-07-02T14:34:32.641Z] ERROR: uncaughtException: Cannot find module '../routes/hotel/locations'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
Error: Cannot find module '../routes/hotel/locations'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js:1:19)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
[2025-07-02T14:35:10.833Z] ERROR: uncaughtException: Cannot find module '../routes/hotel/locations'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
Error: Cannot find module '../routes/hotel/locations'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js:1:19)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
[2025-07-02T14:35:18.465Z] ERROR: uncaughtException: Cannot find module '../routes/hotel/locations'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
Error: Cannot find module '../routes/hotel/locations'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js:1:19)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
[2025-07-02T14:36:00.056Z] ERROR: uncaughtException: Cannot find module '../routes/hotel/locations'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
Error: Cannot find module '../routes/hotel/locations'
Require stack:
- C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js
- C:\Users\KRISHNA\Travel-App\index.js
    at Function._resolveFilename (node:internal/modules/cjs/loader:1225:15)
    at Function._load (node:internal/modules/cjs/loader:1055:27)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:220:24)
    at Module.require (node:internal/modules/cjs/loader:1311:12)
    at require (node:internal/modules/helpers:136:16)
    at Object.<anonymous> (C:\Users\KRISHNA\Travel-App\startup\hotelRoutes.js:1:19)
    at Module._compile (node:internal/modules/cjs/loader:1554:14)
    at Object..js (node:internal/modules/cjs/loader:1706:10)
    at Module.load (node:internal/modules/cjs/loader:1289:32)
